:rocket::memo::lock: The problem Of ticket Id Not Visible Is resolve :lock::memo::rocket:

--- a/Browser/Jira/style.css
+++ b/Browser/Jira/style.css
@@ -112,7 +112,7 @@ textarea{
     height: 2rem;
     background-color: red;
 }
-.text-area{
+.task-area{
     height:calc(100% - 1rem - 2rem);
     font-size: 1.5rem;
     outline: none;
